--- a/src/css/index.css
+++ b/src/css/index.css
@@ -45,3 +45,8 @@ ul li button {
 ul li button:hover {
   background-color: rgb(229, 231, 235);
 }
+
+.completed {
+  text-decoration: line-through;
+  color: gray;
+}
